train with c3 cz c4 channels

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "    #load the gdf file using MNE\n",
     "    raw_gdf = mne.io.read_raw_gdf(dataPath, stim_channel=\"auto\")\n",
     "    raw_gdf.load_data()\n",
-    "    print(raw_gdf)\n",
+    "    print(raw_gdf.ch_names)\n",
     "    gdf_event_labels = mne.events_from_annotations(raw_gdf)[1]\n",
     "    print(gdf_event_labels)\n",
     "    eventCode = [gdf_event_labels[x] for x in eventCode]\n",
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting EDF parameters from d:\\codes\\BCI-VR\\FBCNet\\data\\bci42a\\originalData\\A01T.gdf...\n",
+      "Extracting EDF parameters from /mnt/workspace/FBCNet/data/bci42a/originalData/A01T.gdf...\n",
       "GDF file detected\n",
       "Setting channel info structure...\n",
       "Could not determine channel type of the following channels, they will be set as EEG:\n",
@@ -100,14 +100,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<d:\\anaconda3\\envs\\FBCNet\\lib\\site-packages\\decorator.py:decorator-gen-157>:12: RuntimeWarning: Channel names are not unique, found duplicates for: {'EEG'}. Applying running numbers for duplicates.\n"
+      "</opt/conda/envs/FBCNet/lib/python3.7/site-packages/decorator.py:decorator-gen-156>:12: RuntimeWarning: Channel names are not unique, found duplicates for: {'EEG'}. Applying running numbers for duplicates.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<RawGDF | A01T.gdf, 25 x 672528 (2690.1 s), ~128.3 MB, data loaded>\n",
+      "['EEG-Fz', 'EEG-0', 'EEG-1', 'EEG-2', 'EEG-3', 'EEG-4', 'EEG-5', 'EEG-C3', 'EEG-6', 'EEG-Cz', 'EEG-7', 'EEG-C4', 'EEG-8', 'EEG-9', 'EEG-10', 'EEG-11', 'EEG-12', 'EEG-13', 'EEG-14', 'EEG-Pz', 'EEG-15', 'EEG-16', 'EOG-left', 'EOG-central', 'EOG-right']\n",
       "Used Annotations descriptions: ['1023', '1072', '276', '277', '32766', '768', '769', '770', '771', '772']\n",
       "{'1023': 1, '1072': 2, '276': 3, '277': 4, '32766': 5, '768': 6, '769': 7, '770': 8, '771': 9, '772': 10}\n",
       "Used Annotations descriptions: ['1023', '1072', '276', '277', '32766', '768', '769', '770', '771', '772']\n",
@@ -163,6 +163,35 @@
     "\n",
     "var = VarLayer(0)\n",
     "print(var(x), var(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1., 2.],\n",
+       "         [1., 2.]],\n",
+       "\n",
+       "        [[1., 2.],\n",
+       "         [1., 2.]]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "a = torch.Tensor([[[1, 2], [1, 2]],\n",
+    "[[1, 2], [1, 2]],\n",
+    "[[1, 2], [1, 2]]\n",
+    "                ])\n",
+    "a[[0,1]]"
    ]
   }
  ],
