--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -167,31 +167,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[1., 2.],\n",
-       "         [1., 2.]],\n",
-       "\n",
-       "        [[1., 2.],\n",
-       "         [1., 2.]]])"
+       "tensor([[1., 2.],\n",
+       "        [1., 3.],\n",
+       "        [1., 2.],\n",
+       "        [1., 4.],\n",
+       "        [1., 2.],\n",
+       "        [1., 2.]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import torch\n",
-    "a = torch.Tensor([[[1, 2], [1, 2]],\n",
-    "[[1, 2], [1, 2]],\n",
-    "[[1, 2], [1, 2]]\n",
-    "                ])\n",
-    "a[[0,1]]"
+    "a = torch.Tensor([[1, 2], [1, 3],\n",
+    "[1, 2], [1, 4],\n",
+    "[1, 2], [1, 2] ])\n",
+    "\n",
+    "a.reshape(6, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 2])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape"
    ]
   }
  ],
